# FraudDetection

./: .env.example  .gitignore  CHANGELOG_CAPSTONE_FIXES.md  Dockerfile  FRAUD_DETECTION.md  PRINCIPAL_TPM_GAPS.md  Procfile  README.md  dashboard.py  docker-compose.yml  nixpacks.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml
PRDs/: Fraud-Detection-PRD - Perplexity.md  Fraud_Detection_PRD_v1.2 - Opus.docx  Master Prompt - Fraud Detection.txt  Project PRD Template.txt
config/: policy.yaml  prometheus.yml
docs/: 01-Executive-Overview.md  02-Principal-TPM-Execution-Strategy.md  03-AI-ML-Roadmap.md  04-Results-Personas-Limitations.md  TELCO_ADAPTATION_PLAN.md  architecture-decisions.md
docs/runbooks/: latency-spike.md  redis-failure.md  safe-mode.md
grafana/: fraud-overview.json
loadtest/: README.md  data_generator.py  locustfile.py
loadtest/results/: baseline_50users.md
loadtest/templates/: index.html
models/: lgbm-20260210041650.txt  registry.json  xgb-20260210041650.json
scripts/: init_db.sql  purge_evidence_vault.py  railway-init-db.sh  replay_analysis.py  retrain.sh  seed_supervisor.sh  seed_synthetic.py  train_model.py
src/: __init__.py
src/api/: __init__.py  auth.py  dependencies.py  main.py
tests/: __init__.py  conftest.py  test_api.py  test_detection.py  test_detection_advanced.py  test_detection_engine.py  test_evidence.py  test_ml.py  test_policy.py  test_sanity.py  test_schemas.py  test_scoring.py  test_security_settings.py
ui/: dashboard_enhanced.py
(+38 files in other folders)
